--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,19 @@ name: Test Git Actions Project
 
 on:
   pull_request:
-    branch:
+    branches:
       -  main
 
 jobs:
   test:
-    runs-on:
+    runs-on: ubuntu-latest
+    container:
+        image:  node:20
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          node-version: 20
+      - run: npm ci
+      - run: npm test
+      - run: npm run build
     
