Corretta la it action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latestgit push origin
+    runs-on: ubuntu-latest
     container:
         image:  node:20
     steps:
