--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,5 @@ jobs:
           node-version: 20
       - run: npm ci
       #  - run: npm test
-      - run: npm run build
+      # - run: npm run build
     
